syntax = "proto3";
package new;

option go_package = "gateway-service/pb;new";

message Restaurant {
    int32 id = 1;
    string name = 2;
    string address = 3;
}

message GetDataReturn {
    int32 id = 1;
    string name = 2;
    Restaurant restaurant = 3;
	double price = 4;
}

message GetListDataReturn {
    repeated GetDataReturn lists = 1;
}