syntax = "proto3";
package new;

option go_package = "new-service/pb/new;new";

import "request.proto";
import "return.proto";

service NewService {
  rpc GetListData(GetListDataRequest) returns (GetListDataReturn) {}
}